log/build_2023-02-02_15-41-59/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/buildBestPath.py", line 44
    parsed=search('-source=(id={}, frame_pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id=\'{}\'), point=geometry_msgs.msg.Point(x={}, y={}, z={})), surface={}, edge=True, ground=False, pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='odom_frame'), point=geometry_msgs.msg.Point(x=0.5, y=-0.12033333333333332, z=1.127))) ,target=(id=surfaceA_1_1, frame_pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='surfaceA'), point=geometry_msgs.msg.Point(x=0.1905, y=0.24066666666666667, z=0.0)), surface=surfaceA, edge=False, ground=False, pos=geometry_msgs.msg.PointStamped(header=std_msgs.msg.Header(stamp=builtin_interfaces.msg.Time(sec=0, nanosec=0), frame_id='odom_frame'), point=geometry_msgs.msg.Point(x=0.6905, y=-0.12033333333333332, z=1.127))) ,distance=0.1905,rotation=geometry_msgs.msg.Quaternion(x=0.0, y=0.0, z=0.0, w=1.0)')
                                                                                                                                                                                                                                                                                                                                                                                                  ^
SyntaxError: invalid syntax

